# stt

./: README.md  audio_worker.py  audio_worker_client.py  input_controller.py  menubar.py  mlx_worker.py  onboarding.py  overlay.py  prompt_overlay.py  prompts_config.py  providers.py  pyproject.toml  requirements.txt  stress_recording.py  stt.py  stt_app.py  stt_config.py  stt_defaults.py
